--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,8 +127,8 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-    <%# if @items.present? %>
-       <%# @items.each do |item|%>
+    <% if @items.present? %>
+       <% @items.each do |item|%>
         <li class='list'>
           <%= link_to "#" do %>
           <div class='item-img-content'>
@@ -157,7 +157,7 @@
         </li>
        <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-    <%# else %>
+    <% else %>
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
@@ -179,7 +179,7 @@
       </li>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-    <%# end %>
+    <% end %>
     </ul>
   </div>
   <%# /商品一覧 %>
